--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_USERNAME="snow"
-DB_PASSWORD="dai"
-DB_DOMAIN="localhost"
-DB_PORT="3306"
-DB_DATABASE="mydb"
-DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_DOMAIN}:${DB_PORT}/${DB_DATABASE}"
+# DB_USERNAME="snow"
+# DB_PASSWORD="dai"
+# DB_DOMAIN="localhost"
+# DB_PORT="3306"
+# DB_DATABASE="mydb"
+DATABASE_URL="mongodb://localhost:27017/product-move?retryWrites=true&w=majority"
+PORT="4000"
