--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/serve-static": "^3.0.0",
     "@prisma/client": "^4.7.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "firebase-admin": "^11.3.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^4.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "superstruct": "^1.0.3"
   },
   "devDependencies": {
+    "@firebase/app-types": "^0.9.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -40,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
