--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 # DB_DOMAIN="localhost"
 # DB_PORT="3306"
 # DB_DATABASE="mydb"
-DATABASE_URL="mongodb://localhost:27017/product-move?retryWrites=true&w=majority"
-PORT="4000"
+DATABASE_URL="mongodb+srv://daihoc2k20:dai2002@cluster0.7bi9eq7.mongodb.net/product-move"
+PORT="8080"
